--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -51,7 +51,7 @@
 		    <li>Gaming</li>
 		    <li><a href="https://www.youtube.com/user/iTemp2/videos">iTemp</a></li>
 		    <li><a href="https://www.youtube.com/channel/UCoz3Kpu5lv-ALhR4h9bDvcw/videos">Shroud</a></li>
-		    <li><a href="https://www.youtube.com/user/AculiteGaming/videos">Aculite</a></li>
+		    <li><a href="https://www.twitch.tv/">Twitch</a></li>
 	    </ul>
 	    <hr>
 	    <ul>
