--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -27,37 +27,23 @@
 		<li><a href="https://lists.archlinux.org/pipermail/arch-announce/">announce</a></li>
             </ul>
             <hr>
-            <ul>
-                <li>News</li>
-                <li><a href="https://linuxfr.org">linuxfr</a></li>
-		<li><a href="https://slashdot.org">/.</a></li>
-		<li><a href="https://lemonde.fr">le_monde</a></li>
-	    </ul>
-	    <hr>
-            <ul>
+	    <ul>
                 <li>Reddit</li>
                 <li><a href="https://reddit.com/r/unixporn/new/">'nixprn</a></li>
-		<li><a href="https://reddit.com/r/i3wm/new/">i3</a></li>
 		<li><a href="https://www.reddit.com/r/archlinux/new/">arch</a></li>
 		<li><a href="https://www.reddit.com/r/thinkpad/new/">thkpad</a></li>
             </ul>
 	    <hr>
 	    <ul>
-		    <li>Reddit2</li>
-		    <li><a href="https://www.reddit.com/r/vintageunix/new/">vintageunix</a></li>
+		    <li>Vids</li>
+		    <li><a href="https://www.youtube.com/">youtube</a></li>
+		    <li><a href="https://www.twitch.tv/">twitch</a></li>
 	    </ul>
 	    <hr>
 	    <ul>
-		    <li>Gaming</li>
-		    <li><a href="https://www.youtube.com/user/iTemp2/videos">iTemp</a></li>
-		    <li><a href="https://www.youtube.com/channel/UCoz3Kpu5lv-ALhR4h9bDvcw/videos">Shroud</a></li>
-		    <li><a href="https://www.twitch.tv/">Twitch</a></li>
-	    </ul>
-	    <hr>
-	    <ul>
-		<li>Learn</li>
-		<li><a href="https://openclassrooms.com/en/dashboard">OpenClassrooms</a></li>
-		<li><a href="https://github.com/dylanaraps/pure-bash-bible">Bash_bible</a></li>
+		<li>Resources</li>
+		<li><a href="https://openclassrooms.com/en/dashboard">openclassrooms</a></li>
+		<li><a href="https://github.com/dylanaraps/pure-bash-bible">bash</a></li>
 	    </ul>
             <hr>
 	    <ul>
