--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -36,8 +36,10 @@
 	    <hr>
 	    <ul>
 		    <li>Vids</li>
-		    <li><a href="https://www.youtube.com/">youtube</a></li>
+		    <li><a href="https://www.youtube.com/">yt</a></li>
 		    <li><a href="https://www.twitch.tv/">twitch</a></li>
+		    <li><a href="https://www.netflix.com/">netflix</a></li>
+		    <lI><a href="https://mixer.com/">mixr</a/></li>
 	    </ul>
 	    <hr>
 	    <ul>
