--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -9,45 +9,43 @@
 
     <body>
         <main>
-	<h1>Welcome back</h1>
+	<h1>TCP/IP</h1>
 	<br>
-            <hr>
             <ul>
                 <li>General</li>
 		<li><a href="https://github.com">git</a></li>
 		<li><a href="https://github.com/Fuzzbox999/dotfiles">.files</a></li>
 		<li><a href="https://start.duckduckgo.com" >duckduckgo</a></li>
             </ul>
-            <hr>
+	<br>
 	    <ul>
                 <li>Arch</li>
                 <li><a href="https://www.archlinux.org/">.org</a></li>
                 <li><a href="https://wiki.archlinux.org/">wiki</a></li>
 		<li><a href="https://www.archlinux.org/news/">news</a></li>
-		<li><a href="https://lists.archlinux.org/pipermail/arch-announce/">announce</a></li>
             </ul>
-            <hr>
+	    <br>
 	    <ul>
                 <li>Reddit</li>
                 <li><a href="https://reddit.com/r/unixporn/new/">'nixprn</a></li>
 		<li><a href="https://www.reddit.com/r/archlinux/new/">arch</a></li>
 		<li><a href="https://www.reddit.com/r/thinkpad/new/">thkpad</a></li>
             </ul>
-	    <hr>
+	    <br>
 	    <ul>
-		    <li>Vids</li>
+		    <li>Brainwashing</li>
 		    <li><a href="https://www.youtube.com/">yt</a></li>
-		    <li><a href="https://www.twitch.tv/">twitch</a></li>
+		    <li><a href="https://www.primevideo.com/">amzn</a></li>
 		    <li><a href="https://www.netflix.com/">netflix</a></li>
-		    <lI><a href="https://mixer.com/">mixr</a/></li>
 	    </ul>
-	    <hr>
+	    <br>
 	    <ul>
-		<li>Resources</li>
-		<li><a href="https://openclassrooms.com/en/dashboard">openclassrooms</a></li>
+		<li>Others</li>
+		<li><a href="https://suckless.org/">sck_<</a></li>
+		<li><a href="https://slashdot.org/">/.</a></li>
 		<li><a href="https://github.com/dylanaraps/pure-bash-bible">bash</a></li>
 	    </ul>
-            <hr>
+	    <br>
 	    <ul>
 		    <li>Search</li>
 		    <li>
@@ -55,7 +53,6 @@
 <input name="q" type="text" value="" size="28" autofocus style="margin-right: 0px;" />
 	</form></div></li>
 	    </ul>
-	    <hr>
         </main>
     </body>
 </html>
