--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -44,6 +44,7 @@
 		<li><a href="https://suckless.org/">sck_<</a></li>
 		<li><a href="https://slashdot.org/">/.</a></li>
 		<li><a href="https://github.com/dylanaraps/pure-bash-bible">bash</a></li>
+		<li><a href="https://www.explainshell.com/">xplnshll</a></li>
 	    </ul>
 	    <br>
 	    <ul>
