--- a/.startpage/index.html
+++ b/.startpage/index.html
@@ -13,9 +13,9 @@
 	<br>
             <ul>
                 <li>General</li>
-		<li><a href="https://github.com">git</a></li>
+		<li><a href="https://fuzzbox.pagesperso-orange.fr/">homepg</a></li>
 		<li><a href="https://github.com/Fuzzbox999/dotfiles">.files</a></li>
-		<li><a href="https://start.duckduckgo.com" >duckduckgo</a></li>
+		<li><a href="https://start.duckduckgo.com" >dckdckgo</a></li>
             </ul>
 	<br>
 	    <ul>
@@ -23,6 +23,13 @@
                 <li><a href="https://www.archlinux.org/">.org</a></li>
                 <li><a href="https://wiki.archlinux.org/">wiki</a></li>
 		<li><a href="https://www.archlinux.org/news/">news</a></li>
+            </ul>
+	    <br>
+	    <ul>
+                <li>FreeBSD</li>
+                <li><a href="https://www.freebsd.org/">project</a></li>
+		<li><a href="https://forums.freebsd.org//">forums</a></li>
+		<li><a href="https://docs.freebsd.org/en/books/handbook/">doc</a></li>
             </ul>
 	    <br>
 	    <ul>
